@@ -1,5 +1,8 @@
 [Changes 1.2c01]
 
+* Improve /detach error handling and remove bogus F_SETOWN use, reported
+  by madsage. (caf)
+
 * Add /FSET WHOIS_SECURE for SSL connection info on ratbox, unreal and 
   freenode. (caf)
 
